--- a/WebApplicationAzure/Pages/Index.cshtml
+++ b/WebApplicationAzure/Pages/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
+<div class="text-center" style="background-color:aquamarine">
     <h1 class="display-4">Welcome to Azure Mohanarangan</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
